--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,19 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+        <dependency>
+        <groupId>org.agmip</groupId>
+        <artifactId>agmip-core</artifactId>
+        <version>0.3</version>
+        <scope>system</scope>
+        <systemPath>${project.basedir}/agmip-core-0.3.jar</systemPath>
+    </dependency>
+        <dependency>
+        <groupId>org.agmip</groupId>
+        <artifactId>simple-json-handler</artifactId>
+        <version>1.0</version>
+        <scope>system</scope>
+        <systemPath>${project.basedir}/simple-json-handler-1.0.jar</systemPath>
+    </dependency>
   </dependencies>
 </project>
