--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,10 @@
       <email>j.yash@yahoo.co.in</email>
       <name>Yash Rajkumar Jain</name>
     </developer>
+    <developer>
+      <email></email>
+      <name></name>
+    </developer>
   </developers>
 
   <properties>
@@ -165,7 +169,6 @@
       </plugin>
     </plugins>
   </build>
-
   <dependencies>
     <dependency>
       <groupId>org.agmip</groupId>
@@ -173,24 +176,15 @@
       <version>0.4</version>
     </dependency>
     <dependency>
+      <groupId>org.agmip</groupId>
+      <artifactId>simple-json-handler</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.10</version>
       <scope>test</scope>
-    </dependency>
-        <dependency>
-        <groupId>org.agmip</groupId>
-        <artifactId>agmip-core</artifactId>
-        <version>0.3</version>
-        <scope>system</scope>
-        <systemPath>${project.basedir}/agmip-core-0.3.jar</systemPath>
-    </dependency>
-        <dependency>
-        <groupId>org.agmip</groupId>
-        <artifactId>simple-json-handler</artifactId>
-        <version>1.0</version>
-        <scope>system</scope>
-        <systemPath>${project.basedir}/simple-json-handler-1.0.jar</systemPath>
     </dependency>
   </dependencies>
 </project>
